--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <title>MVC | {% block title %}{% endblock %}</title>
+
+        <link rel="icon" href="{{ asset("img/favicon.png") }}">
+
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            {{ encore_entry_link_tags("app") }}
         {% endblock %}
 
         {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
+            {{ encore_entry_script_tags("app") }}
         {% endblock %}
     </head>
+
     <body>
+        <header>
+            <h1>
+                <a href="/"><i class="fa-regular fa-circle-user"></i> MVC</a>
+            </h1>
+
+            <nav id="primary-nav" class="primary">
+                {% include "nav.html.twig" %}
+            </nav>
+
+            <div id="nav-toggle" class="nav-toggle">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </header>
+
+        <nav id="mobile-nav" class="mobile">
+            {% include "nav.html.twig" %}
+        </nav>
+
         {% block body %}{% endblock %}
     </body>
 </html>
